--- a/Argon_Assault.csproj
+++ b/Argon_Assault.csproj
@@ -288,8 +288,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\CollisionHandler.cs" />
+    <Compile Include="Assets\Enemy.cs" />
     <Compile Include="Assets\MusicPlayer.cs" />
-    <Compile Include="Assets\Player.cs" />
+    <Compile Include="Assets\PlayerController.cs" />
+    <Compile Include="Assets\SceneLoader.cs" />
+    <Compile Include="Assets\SelfDestruct.cs" />
     <Compile Include="Assets\StratosClassCruiser\Ocillator.cs" />
   </ItemGroup>
   <ItemGroup>
